--- a/html_fundamentals_2/index.html
+++ b/html_fundamentals_2/index.html
@@ -1,1 +1,19 @@
-<!-- index.html file for html_fundamentals_2 -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+</head>
+<body>
+Hello, I am Kevin.
+<h1>Hello World</h1>
+<p>I use to be a financial analyst, it was enjoyable for a time, but computers and technologies alwasys left me wanting more.</p>
+<p>My goal is to be a well known developer & business entrepreneur that will one day mentor and help others grow in to something great. Paying forward the knowledge, experience, and advice that I contain from those that have come before me.</p>
+<h3 style="color: blue;">Skills</h3>
+<p>Javascript</p>
+<p>React.js</p>
+<p>HTML5</p>
+<p>jQuery</p>
+<p>CSS3</p>
+</body>
+</html>
