--- a/html_fundamentals_5/layout2/index.html
+++ b/html_fundamentals_5/layout2/index.html
@@ -2,9 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Layout 2</title>
 </head>
 <body>
+    <div id="header">
 
+    </div>
+    <div id="main-content">
+        <h2>About Me</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut delectus dolorem excepturi in laboriosam numquam repellendus? Aliquam architecto atque cum eaque libero perferendis, sit. Et nihil qui quia similique voluptatem.</p>
+        <h2>Skills</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse magnam nemo odio perspiciatis quia sint voluptatem! Amet aspernatur dolorum eligendi illo, ipsa, labore odit, officia officiis provident quae soluta veritatis?</p>
+        <h2>Experience</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda at consectetur, consequuntur corporis, culpa deserunt distinctio dolores excepturi facere illo magni minima, modi perspiciatis quas sequi veritatis voluptatum. Aut, inventore?</p>
+        <h2>Contact Me</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur deleniti enim, excepturi facere impedit in laboriosam molestias mollitia neque nostrum officia perferendis, praesentium quidem rem soluta tempora tempore, ullam veniam?</p>
+    </div>
 </body>
 </html>
