--- a/flexbox/practice/index.html
+++ b/flexbox/practice/index.html
@@ -7,6 +7,38 @@
 </head>
 <body>
 
+<!--First Example: Flex-->
+    <div class="container">
+        <form action="">
+            <div class="form-row">
+                <label for="name">Name:</label>
+                <input type="text" id="name"/>
+            </div>
+            <div class="form-row">
+                <label for="color">Favorite Color:</label>
+                <input type="text" id="color"/>
+            </div>
+        </form>
+    </div>
+
+<!--Second Example: Column Layout-->
+    <div class="column-layout">
+        <div id="main-content">
+            <h2>Main Column</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur commodi incidunt iste necessitatibus non odio officiis quasi quo soluta, unde. A aliquam dolores ducimus modi nihil officiis reiciendis velit voluptate?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur commodi incidunt iste necessitatibus non odio officiis quasi quo soluta, unde. A aliquam dolores ducimus modi nihil officiis reiciendis velit voluptate?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur commodi incidunt iste necessitatibus non odio officiis quasi quo soluta, unde. A aliquam dolores ducimus modi nihil officiis reiciendis velit voluptate?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur commodi incidunt iste necessitatibus non odio officiis quasi quo soluta, unde. A aliquam dolores ducimus modi nihil officiis reiciendis velit voluptate?</p>
+        </div>
+        <div id="sidebar-one">
+            <h3>Sidebar One</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur commodi incidunt iste necessitatibus non odio officiis quasi quo soluta, unde. A aliquam dolores ducimus modi nihil officiis reiciendis velit voluptate?</p>
+        </div>
+        <div id="sidebar-two">
+            <h3>Sidebar Two</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur commodi incidunt iste necessitatibus non odio officiis quasi quo soluta, unde. A aliquam dolores ducimus modi nihil officiis reiciendis velit voluptate?</p>
+        </div>
+    </div>
 
 </body>
 </html>
